    (tomas dot brastavicius at quantum dot lt, Pierrick)
  . Fixed bug #54137 (file_get_contents POST request sends additional line break).
    (maurice-php at mertinkat dot net, Ilia)
  . Fixed bug #54866 (incorrect accounting for realpath_cache_size) (Dustin Ward)
  . Fixed bug #54721 (Different Hashes on Windows, BSD and Linux on wrong Salt size) 
    (Pierre, os at irj dot ru)
  . Fixed bug #50363 (Invalid parsing in convert.quoted-printable-decode filter).
    (slusarz at curecanti dot org)
  . Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using 
    TMPDIR on Windows). (Pierre)

- Apache2 Handler SAPI:
  . Fixed bug #54529 (SAPI crashes on apache_config.c:197).
    (hebergement at riastudio dot fr)

- cURL:
  . Added CURLINFO_REDIRECT_URL support. (Daniel Stenberg, Pierre)
  . Added support for CURLOPT_MAX_RECV_SPEED_LARGE and 
    CURLOPT_MAX_SEND_SPEED_LARGE. FR #51815. (Pierrick)

- DateTime extension:
  . Fixed bug #54340 (DateTime::add() method bug). (Adam)
  . Fixed bug #54316 (DateTime::createFromFormat does not handle trailing '|'
    correctly). (Adam)
  . Fixed bug #54283 (new DatePeriod(NULL) causes crash). (Felipe)

- DBA extension:
  . Fixed bug #54242 (dba_insert returns true if key already exists). (Felipe)

- Exif extesion:
  . Fixed bug #54121 (error message format string typo). (Ilia)

- Fileinfo extension:
  . Fixed bug #54934 (Unresolved symbol strtoull in HP-UX 11.11). (Felipe)

- Filter extension:
  . Added 3rd parameter to filter_var_array() and filter_input_array()
    functions that allows disabling addition of empty elements. (Ilia)
  . Fixed bug #53037 (FILTER_FLAG_EMPTY_STRING_NULL is not implemented). (Ilia)
  
- Interbase extension:
  . Fixed bug #54269 (Short exception message buffer causes crash). (Felipe)
  
- intl extension:
  . Implemented FR #54540 (Allow loading of arbitrary resource bundles when
    fallback is disabled). (David Zuelke, Stas)

- LDAP extension: